<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    tools:context="com.example.aqibjaved.greatsms.GreatSmsHome"
    >
    <TextView
        android:id="@+id/waterMark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/app_name_water_mark_font"
        android:textStyle="bold"
        android:textColor="@color/White_watermark"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/path_to_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/hint_path_of_file"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme" />

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/message_box_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/path_to_file"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_enter_message"
            android:inputType="textMultiLine"
            android:theme="@style/EditTextTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/message"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/start_sending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_start_sending" />

            <Button
                android:id="@+id/stop_sending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_stop_sending" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="@color/phone_number_color"
            android:textSize="@dimen/phone_number_size"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="28dp"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/copyrights_font"
            android:textColor="@color/copyrights_text_color"
            android:text="@string/copyrights"
            android:gravity="center"
            />


    </RelativeLayout>
</FrameLayout>